--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,28 +29,26 @@ import(tibble)
 import(tidygraph)
 import(tidyr)
 importFrom(GA,ga)
-importFrom(RColorBrewer,brewer.pal)
 importFrom(assertthat,assert_that)
-importFrom(cowplot,theme_nothing)
+importFrom(dplyr,.data)
+importFrom(dplyr,lead)
+importFrom(dplyr,near)
 importFrom(ggforce,geom_link2)
+importFrom(ggplot2,"%+replace%")
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colours)
 importFrom(grDevices,rainbow)
+importFrom(grDevices,rgb)
 importFrom(grDevices,rgb2hsv)
 importFrom(grid,arrow)
 importFrom(grid,unit)
-importFrom(magrittr,"%$%")
-importFrom(magrittr,"%<>%")
-importFrom(magrittr,set_colnames)
-importFrom(magrittr,set_rownames)
 importFrom(patchwork,wrap_plots)
-importFrom(rje,cubeHelix)
 importFrom(stats,approx)
 importFrom(stats,as.dendrogram)
 importFrom(stats,as.dist)
-importFrom(stats,dist)
 importFrom(stats,dnorm)
 importFrom(stats,hclust)
 importFrom(stats,runif)
+importFrom(stats,sd)
 importFrom(utils,tail)
