--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,27 +14,66 @@ export(plot_linearised_comparison)
 export(plot_onedim)
 export(plot_strip)
 export(plot_topology)
-export(process_dynplot)
 export(theme_clean)
 export(theme_graph)
-import(dplyr)
-import(dyndimred)
-import(dynutils)
 import(dynwrap)
 import(ggplot2)
 import(ggraph)
 import(methods)
-import(purrr)
-import(tibble)
-import(tidygraph)
-import(tidyr)
 importFrom(GA,ga)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,.data)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
+importFrom(dplyr,desc)
+importFrom(dplyr,do)
+importFrom(dplyr,filter)
+importFrom(dplyr,first)
+importFrom(dplyr,full_join)
+importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,lag)
+importFrom(dplyr,last)
 importFrom(dplyr,lead)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
+importFrom(dplyr,mutate_at)
+importFrom(dplyr,mutate_if)
+importFrom(dplyr,n)
 importFrom(dplyr,near)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename)
+importFrom(dplyr,rename_all)
+importFrom(dplyr,rename_at)
+importFrom(dplyr,rename_if)
+importFrom(dplyr,right_join)
+importFrom(dplyr,row_number)
+importFrom(dplyr,sample_n)
+importFrom(dplyr,select)
+importFrom(dplyr,slice)
+importFrom(dplyr,summarise)
+importFrom(dplyr,summarise_at)
+importFrom(dplyr,summarise_if)
+importFrom(dplyr,top_n)
+importFrom(dplyr,transmute)
+importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
+importFrom(dyndimred,dimred_landmark_mds)
+importFrom(dyndimred,dimred_mds)
+importFrom(dyndimred,dimred_umap)
+importFrom(dyndimred,list_dimred_methods)
+importFrom(dynutils,"%all_in%")
+importFrom(dynutils,calculate_distance)
+importFrom(dynutils,extract_row_to_list)
+importFrom(dynutils,inherit_default_params)
+importFrom(dynutils,is_sparse)
+importFrom(dynutils,list_as_tibble)
+importFrom(dynutils,scale_minmax)
+importFrom(dynutils,scale_quantile)
 importFrom(ggforce,geom_link2)
-importFrom(ggplot2,"%+replace%")
 importFrom(ggrepel,geom_label_repel)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colours)
@@ -44,6 +83,20 @@ importFrom(grDevices,rgb2hsv)
 importFrom(grid,arrow)
 importFrom(grid,unit)
 importFrom(patchwork,wrap_plots)
+importFrom(purrr,"%>%")
+importFrom(purrr,discard)
+importFrom(purrr,keep)
+importFrom(purrr,list_modify)
+importFrom(purrr,map)
+importFrom(purrr,map2)
+importFrom(purrr,map2_dbl)
+importFrom(purrr,map2_df)
+importFrom(purrr,map_chr)
+importFrom(purrr,map_dbl)
+importFrom(purrr,map_df)
+importFrom(purrr,map_int)
+importFrom(purrr,pmap)
+importFrom(purrr,set_names)
 importFrom(stats,approx)
 importFrom(stats,as.dendrogram)
 importFrom(stats,as.dist)
@@ -51,4 +104,21 @@ importFrom(stats,dnorm)
 importFrom(stats,hclust)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(tibble,as_tibble)
+importFrom(tibble,column_to_rownames)
+importFrom(tibble,deframe)
+importFrom(tibble,enframe)
+importFrom(tibble,lst)
+importFrom(tibble,rownames_to_column)
+importFrom(tibble,tibble)
+importFrom(tibble,tribble)
+importFrom(tidygraph,as_tbl_graph)
+importFrom(tidygraph,tbl_graph)
+importFrom(tidyr,crossing)
+importFrom(tidyr,everything)
+importFrom(tidyr,gather)
+importFrom(tidyr,nest)
+importFrom(tidyr,one_of)
+importFrom(tidyr,spread)
+importFrom(tidyr,unnest)
 importFrom(utils,tail)
