--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,18 @@
 Package: dynplot
 Type: Package
 Title: Plotting functions for the dynverse
-Version: 1.0.2.9000
-Authors@R: c(
-  person("Robrecht", "Cannoodt", email = "rcannood@gmail.com", role = c("aut")),
-  person("Wouter", "Saelens", email = "wouter.saelens@gmail.com", role = c("aut", "cre")))
+Version: 1.1.0
+Authors@R: 
+    c(person(given = "Robrecht",
+             family = "Cannoodt",
+             role = c("aut", "cre", "cph"),
+             email = "rcannood@gmail.com",
+             comment = c(ORCID = "0000-0003-3641-729X")),
+      person(given = "Wouter",
+             family = "Saelens",
+             role = "aut",
+             email = "wouter.saelens@ugent.be",
+             comment = c(ORCID = "0000-0002-7114-6248")))
 Description: Create ggplot2 plots of single-cell trajectories. This can be
             the trajectory topology itself, projected onto a dimensionality reduction,
             using a heatmap, or a comparison between two trajectories.
@@ -12,7 +20,6 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-SystemRequirements: libudunits2-dev (deb) or udunits2-devel (rpm)
 URL: https://github.com/dynverse/dynplot
 BugReports: https://github.com/dynverse/dynplot/issues
 Depends:
