use startswith instead of compnames

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ importFrom(tidyr,gather)
 importFrom(tidyr,nest)
 importFrom(tidyr,one_of)
 importFrom(tidyr,spread)
+importFrom(tidyr,starts_with)
 importFrom(tidyr,unnest)
 importFrom(utils,head)
 importFrom(utils,tail)
