--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dynplot
 Type: Package
-Title: Plotting functions for the dynverse
+Title: Plotting Single-Cell Trajectories
 Version: 1.1.0
 Authors@R: 
     c(person(given = "Robrecht",
@@ -13,7 +13,7 @@ Authors@R:
              role = "aut",
              email = "wouter.saelens@ugent.be",
              comment = c(ORCID = "0000-0002-7114-6248")))
-Description: Create ggplot2 plots of single-cell trajectories. This can be
+Description: Visualising single-cell trajectories. This can be
             the trajectory topology itself, projected onto a dimensionality reduction,
             using a heatmap, or a comparison between two trajectories.
 License: MIT + file LICENSE
